# fastapipet

./: .gitignore  LICENSE  pyproject.toml
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt  secret_key.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  email.py
backend/app/core/: config.py  dependencies.py  logging.py  rate_limiting.py  responses.py  security.py
backend/app/core/exceptions/: handlers.py
backend/app/db/: __init__.py
backend/app/db/models/: user.py
backend/app/db/schemas/: user.py
backend/app/db/seeders/: runner.py  user_seeder.py
backend/app/services/: file.py  token.py
backend/app/utils/: pagination.py
backend/migrations/versions/: 3320ec1671b1_description_of_changes.py
backend/tests/: conftest.py  test_api.py  test_auth_endpoints.py  test_exception_handling.py  test_seeders.py  test_services.py  test_token_service.py
frontend/: package-lock.json
