[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cffi>=2.0.0",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "slowapi>=0.1.9",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.50",
    "wrapt>=2.2.1",
]
