[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.1",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "blinker>=1.9.0",
    "cffi>=2.0.0",
    "click>=8.4.1",
    "colorama>=0.4.6",
    "ecdsa>=0.19.2",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.136.3",
    "h11>=0.16.0",
    "idna>=3.18",
    "iniconfig>=2.3.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "limits>=5.8.0",
    "loguru>=0.7.3",
    "mako>=1.3.12",
    "markupsafe>=3.0.3",
    "passlib>=1.7.4",
    "pluggy>=1.6.0",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pwdlib>=0.3.0",
    "pyasn1>=0.6.3",
    "pycparser>=3.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-html>=4.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "rsa>=4.9.1",
    "six>=1.17.0",
    "slowapi>=0.1.9",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "starlette>=1.2.1",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "watchfiles>=1.2.0",
    "websockets>=16.0",
    "win32-setctime>=1.2.0",
    "wrapt>=2.2.1",
]
